add satellite probes

--- a/Assignment3/LatencyContinentPlots.ipynb
+++ b/Assignment3/LatencyContinentPlots.ipynb
@@ -53,6 +53,17 @@
     "    '49936166': {'host': 'us-east.azure.cloudharmony.net', 'type': 'cellular'},\n",
     "    '49936165': {'host': 'us-east4.gce.cloudharmony.net', 'type': 'cellular'},\n",
     "    '49936164': {'host': 'australia-east.azure.cloudharmony.net', 'type': 'cellular'},\n",
+    "    '49936331': {'host': 'asia-east.azure.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936330': {'host': 'asia-east2.gce.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936329': {'host': 'ap-east-1.ec2.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936328': {'host': 'uk-south.azure.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936327': {'host': 'europe-west2.gce.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936326': {'host': 'eu-west-2.ec2.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936325': {'host': 'brazil-south.azure.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936324': {'host': 'us-east.azure.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936323': {'host': 'us-east4.gce.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936322': {'host': 'australia-east.azure.cloudharmony.net', 'type': 'satellite'},\n",
+    "    '49936321': {'host': 'us-east-1.ec2.cloudharmony.net', 'type': 'satellite'},\n",
     "}"
    ]
   },
